# voxel-game-engine

./: .gitignore  CMakeLists.txt  README.md
shaders/: shader.fs  shader.vs
src/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  geometry.hpp  main.cpp  shader.cpp  shader.hpp
